fixed broken style in .css file

--- a/java/com.sap.sse.security.ui/src/main/java/com/sap/sse/security/ui/login/LoginViewResources.css
+++ b/java/com.sap.sse.security.ui/src/main/java/com/sap/sse/security/ui/login/LoginViewResources.css
@@ -39,12 +39,8 @@ body {
 	padding: 10px;
 }
 
-.textInput_watermark {
+.textInput_watermark, .passwordTextInput_watermark {
 	color: gray;
-}
-
-.passwordTextInput_watermark {
-	color:;
 }
 
 .glowing_border {
